answers
#3 answer
7
End
2
End
31
End
5
4
End
6
End
8
End
#4 answer
7
End
2
End
3
End
1
End
5

#5.
if a =[1,2,3]
    ^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

#6 answer
2
#7 answer
li={[1,2,3],[4,5,6]}
TypeError: unhashable type: 'list'
 